# kenwood-chef-api

./: .gitignore  Cargo.toml  LICENSE  README.md  ROOTING.md  a.json  devenv.nix  devenv.yaml  flake.nix  justfile  repository.json  result  server.crt  server.csr
.config/: rail.toml
.github/workflows/: build.yaml
api/: Cargo.toml
api/src/: ingest.rs  main.rs  server.rs
ca_stuff/: ca.crt  ca.key  ca.srl  server.key  simmsb.ext
db/: Cargo.toml
db/src/: lib.rs
db/src/entities/: author.rs  image.rs  ingredient.rs  ingredient_unit.rs  mod.rs  prelude.rs  preparation.rs  recipe.rs  unit.rs
db/src/queries/: images.rs  ingest.rs  ingredients.rs  mod.rs  preparations.rs  recipes.rs
kenwood-chef-api/: README.md  config.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251221_133916_add_images.rs  m20260104_181130_add_exposed_id.rs
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs  values.rs
ui/: Cargo.toml  tailwind.css
ui/assets/: tailwind.css
ui/src/: db.rs  main.rs
ui/src/components/: echo.rs  mod.rs  paginate.rs  recipe_item.rs
ui/src/components/button/: component.rs
ui/src/components/card/: component.rs
ui/src/components/input/: component.rs
ui/src/components/native_select/: component.rs
ui/src/components/searching_select/: component.rs  context.rs  focus.rs  group.rs  list.rs  mod.rs  option.rs  select.rs  style.css  trigger.rs  utils.rs  value.rs
ui/src/components/select/: component.rs
ui/src/components/textarea/: component.rs
ui/src/components/toggle/: component.rs
ui/src/views/: edit_recipe.rs  home.rs  ingest.rs  mod.rs  navbar.rs
