[workspace]
members = [
    "api",
    "db",
    "migration",
    "types",
    "ui",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "^0.4.42", features = ["serde"] } #unified
db = { path = "db", version = "^0.1.0" } #unified
jiff = { version = "^0.2.16", default-features = false, features = ["serde", "std"] } #unified
migration = { path = "migration", version = "^0.1.0" } #unified
serde = { version = "^1.0.228", features = ["derive"] } #unified
serde_json = "^1.0.145" #unified
tokio = { version = "^1.48.0", features = ["full"] } #unified
tracing = { version = "^0.1.43", features = ["async-await"] } #unified
types = { path = "types", version = "^0.1.0" } #unified

[workspace.package]
rust-version = "1.88"
