[workspace]
members = [
    "api",
    "db",
    "migration",
    "types",
    "ui",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "^0.4.42", features = ["serde"] } #unified
db = { path = "db", version = "^0.1.0" } #unified
image = "^0.25.9" #unified
itertools = "^0.14.0" #unified
jiff = { version = "^0.2.17", default-features = false, features = ["serde", "std"] } #unified
migration = { path = "migration", version = "^0.1.0" } #unified
rand = "^0.9.2" #unified
reqwest = { version = "^0.12.28", features = ["blocking", "json", "rustls-tls"] } #unified
serde = { version = "^1.0.228", features = ["derive"] } #unified
serde_json = "^1.0.147" #unified
serde_path_to_error = "^0.1.20" #unified
tokio = { version = "^1.48.0", features = ["full"] } #unified
tracing = { version = "^0.1.44", features = ["async-await"] } #unified
types = { path = "types", version = "^0.1.0" } #unified

[workspace.package]
rust-version = "1.88.0"
version = "0.1.1"
