[workspace]
members = [
    "api",
    "db",
    "migration",
    "types",
    "ui",
]
resolver = "3"

[workspace.dependencies]
chrono = { version = "^0.4.42", features = ["serde"] } #unified
db = { path = "db", version = "^0.1.0" } #unified
image = "^0.25.9" #unified
itertools = "^0.14.0" #unified
jiff = { version = "^0.2.17", default-features = false, features = ["serde", "std"] } #unified
migration = { path = "migration", version = "^0.1.0" } #unified
rand = "^0.9.2" #unified
reqwest = { version = "^0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] } #unified
serde = { version = "^1.0.228", features = ["derive"] } #unified
serde_json = "^1.0.147" #unified
serde_path_to_error = "^0.1.20" #unified
tokio = { version = "^1.48.0", features = ["full"] } #unified
tracing = { version = "^0.1.44", features = ["async-await"] } #unified
types = { path = "types", version = "^0.1.0" } #unified

[workspace.package]
rust-version = "1.88.0"
version = "0.1.4"

[patch.crates-io]
dioxus = { git = "https://github.com/simmsb/dioxus" }
dioxus-core = { git = "https://github.com/simmsb/dioxus" }
dioxus-stores = { git = "https://github.com/simmsb/dioxus" }
dioxus-html = { git = "https://github.com/simmsb/dioxus" }
dioxus-server = { git = "https://github.com/simmsb/dioxus" }

# dioxus = { path = "/home/ben/dev/dioxus/packages/dioxus" }
# dioxus-core = { path = "/home/ben/dev/dioxus/packages/core" }
# dioxus-stores = { path = "/home/ben/dev/dioxus/packages/stores" }
# dioxus-html = { path = "/home/ben/dev/dioxus/packages/html" }
# dioxus-server = { path = "/home/ben/dev/dioxus/packages/fullstack-server" }
