[package]
name = "kenwood-chef-api"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "../migration" }
db = { path = "../db" }
types = { path = "../types" }

axum = { version = "0.8.7", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
color-eyre = "0.6.5"
error-stack = { version = "0.6.0", features = ["eyre", "spantrace", "futures", "tracing"] }
http-body-util = { version = "0.1.3", features = ["full"] }
reqwest = "0.12.25"
rumqttd = "0.20.0"
rustls = "0.23.35"
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls", "with-json"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = "0.3.22"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
resolve-path = "0.1.0"
serde_path_to_error = "0.1.20"
itertools = "0.14.0"
tantivy = { version = "0.25.0", features = ["quickwit"] }
