[package]
name = "kenwood-chef-api"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
chrono = { workspace = true, features = ["serde"] } #unified
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
db = { workspace = true } #unified
http-body-util = { version = "0.1.3", features = ["full"] }
image = { workspace = true } #unified
itertools = { workspace = true } #unified
migration = { workspace = true } #unified
reqwest = { workspace = true, features = ["blocking"] } #unified
resolve-path = "0.1.0"
# rumqttd = "0.20.0"
rustls = "0.23.35"
sea-orm = { version = "^2.0.0-rc.22", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls", "with-json"] }
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
serde_path_to_error = { workspace = true } #unified
tokio = { workspace = true } #unified
tracing = { workspace = true } #unified
tracing-subscriber = "0.3.22"
types = { workspace = true } #unified
