[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true } #unified
dioxus-stores = "0.7.2"
jiff = { workspace = true } #unified
rand = "0.9.2"
serde = { workspace = true } #unified
serde_json = { workspace = true } #unified
serde_with = "3.16.1"
strum = { version = "0.27.2", features = ["derive"] }
