[package]
name = "ui"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
db = { workspace = true, optional = true } #unified
dioxus = { version = "0.7.2", features = ["router", "fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
dioxus-query = "0.9.0"
dioxus-sdk = { version = "0.7.0", features = ["time"] }
english = "0.1.3"
getrandom = { version = "0.3.4", default-features = false }
itertools = "0.14.0"
jiff = { workspace = true } #unified
nucleo-matcher = "0.3.1"
rand = "0.9.2"
sea-orm = { version = "^2.0.0-rc", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls", "with-json"], optional = true }
serde_json.workspace = true
tokio = { workspace = true, optional = true } #unified
tracing = { workspace = true } #unified
types = { workspace = true } #unified

[features]
default = ["server", "web"]
web = ["dioxus/web", "dioxus-primitives/web", "getrandom/wasm_js"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:db", "dep:sea-orm", "dep:tokio"]
